fix: bug on mobile

--- a/src/components/Card/styles/index.css
+++ b/src/components/Card/styles/index.css
@@ -13,47 +13,49 @@
     float: left;
     margin: 100% 10px 10px 10px;
     border-radius: 0.3rem;
-    display: flex;
-    flex-flow: row nowrap;
     overflow: hidden;
     animation: slideUp 1.2s forwards;
 }
 
+.card-content {
+    cursor: default; 
+    /* align-self: flex-end; */
+    width: 100%;
+    height: 100%;
+    color: white;
+    background-color: rgba(0,0,0, 0.8);
+    transform: translateY(150px) translateZ(0);
+    transition: transform 0.5s;
+    /* padding: 10px; */
+}
+
+.card-content:hover {
+    transform: translateY(0) translateZ(0);
+}
+
 .card-title {
     height: 40px;
+    padding: 10px 10px 0 10px;
     font-size: 1.7rem;
     font-weight: 100;
-    padding: .7rem 0 0 .7rem;
+    /* background-color:green;  */
 }
 
 .card-description {
+    height: 100px;
     font-size: 0.9rem;
     font-weight: 300;
-}
-
-.card-header {
-    cursor: default; 
-    align-self: flex-end;
-    width: 100%;
-    height: 200px;
-    color: white;
-    position: relative;
-    background-color: rgba(0,0,0, 0.8);
-    transform: translateY(160px) translateZ(0);
-    transition: transform 0.5s;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.card-title:hover {
-    transform: translateY(10px) translateZ(0);
+    text-justify: inter-word;
+    margin: 0 10px 0 10px;
+    /* background-color: blue; */
 }
 
 .card-buttons {
-    /* margin-top: 20px; */
-    width: 90%;
-    margin-top: 10px;
+    height: 40px;
+    margin: 0 10px 0 10px;
+    font-size: 0.9rem;
+    font-weight: 300;
+    /* background-color: red; */
 }
 
 .card-button {
@@ -72,51 +74,8 @@
     color: black;
 }
 
-.card-tag {
-    font-size: 0.7rem;
-    max-height: 15px;
-    border: 1px solid white; 
-    padding: 5px;
-    margin-right: 7px;
-    border-radius: 0.3rem;
-}
-
-.technologies {
-    display: flex;
-    align-items: flex-start;
-}
-
-/* 4K! */
-/* @media screen and (min-width: 1450px) {
-    .card-item {
-        height: 500px;
-        width: 600px;
-    }
-} */
-
-@media screen and (max-width: 768px) {
-    .card-item {
-        height: 210px;
-        width: 270px;
-    }
-
-    .card-header {
-        height: 270px;
-        transform: translateY(230px) translateZ(0);
-    }
-
-    .card-title:hover {
-        transform: translateY(70px) translateZ(0);
-    }
-
-    .card-description {
-        padding-top: .7rem;
-    }
-}
-
 @media screen and (max-width: 425px) {
     .card-item {
-        height: 210px;
-        width: 90%;
+        width: 85%;
     }
 }
